Name install via url to Install via Install  Script
We're using a script here when it really comes down to it

Signed-off-by: Tim Smith <tsmith@chef.io>

--- a/chef_master/source/_templates/nav-docs.html
+++ b/chef_master/source/_templates/nav-docs.html
@@ -419,7 +419,7 @@
               },
               {
                 "hasSubItems": false,
-                "title": "Install via URL",
+                "title": "Install via Install Script",
                 "url": "/install_omnibus.html"
               },
               {
